--- a/apps/static/docs-viewer/index.html
+++ b/apps/static/docs-viewer/index.html
@@ -6,6 +6,7 @@
 
     <!-- Yandex.RTB -->
     <script>window.yaContextCb = window.yaContextCb || []</script>
+    <script src="context.js" async></script>
     <script src="https://yandex.ru/ads/system/context.js" async></script>
 </head>
 
