--- a/apps/static/docs-viewer/index.html
+++ b/apps/static/docs-viewer/index.html
@@ -1,7 +1,7 @@
 <Html> <!-- This tag is compulsory for any HTML document. -->
 
 <head>
-    <link rel="stylesheet" href="normalize.css" />
+    <link rel="stylesheet" href="/normalize.css" />
     <link rel="stylesheet" href="index.css" />
 
     <!-- Yandex.RTB -->
