--- a/apps/static/index.html
+++ b/apps/static/index.html
@@ -21,6 +21,23 @@
         <a href="https://t.me/mkgt_official_bot"><img src="/images/mainpage/tgbotqr.svg" class="botqr" /></a>
         <a href="https://t.me/mkgt_official_bot"><img src="/images/mainpage/botbuttons.svg" class="botbuttons" /></a>
     </section>
+    <section id="features">
+        <h1 class="hugetitle">Что умеет помощник</h1>
+        <div class="features-list">
+            <div class="feature">
+                1. Автоматическая рассылка замен
+            </div>
+            <div class="feature">
+                2. Поддерживает 2 режима: Люблино и Кучин
+            </div>
+            <div class="feature">
+                3. Собственное средство просмотра доукментов
+            </div>
+            <div class="feature">
+                4. Уникальный API для разработчиков
+            </div>
+        </div>
+    </section>
 </Body>
 
 </Html>
