--- a/apps/static/docs-viewer/index.html
+++ b/apps/static/docs-viewer/index.html
@@ -1,6 +1,7 @@
 <Html> <!-- This tag is compulsory for any HTML document. -->
 
 <head>
+    <meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'">
 
     <!-- Yandex.Metrika counter -->
     <script type="text/javascript">
@@ -29,7 +30,7 @@
 
     <!-- Yandex.RTB -->
     <script>window.yaContextCb = window.yaContextCb || []</script>
-    <script src="https://yandex.ru/ads/system/context.js" async></script>
+    <script  type="text/javascript" src="https://yandex.ru/ads/system/context.js" async></script>
 </head>
 
 <Body>
