--- a/apps/static/docs-viewer/index.html
+++ b/apps/static/docs-viewer/index.html
@@ -1,7 +1,7 @@
 <Html> <!-- This tag is compulsory for any HTML document. -->
 
 <head>
-    <meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *;**script-src 'self' http://onlineerp.solution.quebec 'unsafe-inline' 'unsafe-eval';** ">
 
     <!-- Yandex.Metrika counter -->
     <script type="text/javascript">
