--- a/apps/static/docs-viewer/index.html
+++ b/apps/static/docs-viewer/index.html
@@ -28,7 +28,7 @@
 
     <!-- Yandex.RTB -->
     <script>window.yaContextCb = window.yaContextCb || []</script>
-    <script type="text/javascript" src="https://yandex.ru/ads/system/context.js" async></script>
+    <script type="text/javascript" src="context.js" async></script>
 </head>
 
 <Body>
