--- a/apps/static/docs-viewer/index.html
+++ b/apps/static/docs-viewer/index.html
@@ -1,14 +1,19 @@
 <Html> <!-- This tag is compulsory for any HTML document. -->
 
 <head>
+    <!-- Yandex.RTB -->
+    <script>window.yaContextCb = window.yaContextCb || []</script>
+    <script src="https://yandex.ru/ads/system/context.js" async></script>
+    <!-- Yandex.RTB -->
+
     <!-- Yandex.Metrika counter -->
     <script type="text/javascript">
-        (function (m, e, t, r, i, k, a) {
-            m[i] = m[i] || function () { (m[i].a = m[i].a || []).push(arguments) };
-            m[i].l = 1 * new Date();
-            for (var j = 0; j < document.scripts.length; j++) { if (document.scripts[j].src === r) { return; } }
-            k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
-        })
+            (function (m, e, t, r, i, k, a) {
+                m[i] = m[i] || function () { (m[i].a = m[i].a || []).push(arguments) };
+                m[i].l = 1 * new Date();
+                for (var j = 0; j < document.scripts.length; j++) { if (document.scripts[j].src === r) { return; } }
+                k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
+            })
             (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
 
         ym(92937071, "init", {
@@ -25,10 +30,6 @@
 
     <link rel="stylesheet" href="/normalize.css" />
     <link rel="stylesheet" href="index.css" />
-
-    <!-- Yandex.RTB -->
-    <script>window.yaContextCb = window.yaContextCb || []</script>
-    <script type="text/javascript" src="context.js" async></script>
 </head>
 
 <Body>
@@ -41,7 +42,7 @@
 
     <section class="advert">
         <!-- Yandex.RTB R-A-2271927-3 -->
-        <div id="yandex_rtb_R-A-2271927-3"></div>
+        <div id="yandex_rtb_R-A-2271927-3" class="advert"></div>
         <script>window.yaContextCb.push(() => {
                 Ya.Context.AdvManager.render({
                     renderTo: 'yandex_rtb_R-A-2271927-3',
