--- a/apps/static/docs-viewer/index.html
+++ b/apps/static/docs-viewer/index.html
@@ -40,9 +40,8 @@
         </iframe>
     </section>
 
-    <section class="advert">
+    <section id="yandex_rtb_R-A-2271927-3" class="advert">
         <!-- Yandex.RTB R-A-2271927-3 -->
-        <div id="yandex_rtb_R-A-2271927-3" class="advert"></div>
         <script>window.yaContextCb.push(() => {
                 Ya.Context.AdvManager.render({
                     renderTo: 'yandex_rtb_R-A-2271927-3',
