--- a/apps/static/docs-viewer/index.html
+++ b/apps/static/docs-viewer/index.html
@@ -40,16 +40,17 @@
         </iframe>
     </section>
 
-    <section id="yandex_rtb_R-A-2271927-3" class="advert">
-
+    <section class="advert">
+        <div id="yandex_rtb_R-A-2271927-3"></div>
+        <!-- Yandex.RTB R-A-2271927-3 -->
+        <script>window.yaContextCb.push(() => {
+                Ya.Context.AdvManager.render({
+                    renderTo: 'yandex_rtb_R-A-2271927-3',
+                    blockId: 'R-A-2271927-3'
+                })
+            })</script>
     </section>
-    <!-- Yandex.RTB R-A-2271927-3 -->
-    <script>window.yaContextCb.push(() => {
-            Ya.Context.AdvManager.render({
-                renderTo: 'yandex_rtb_R-A-2271927-3',
-                blockId: 'R-A-2271927-3'
-            })
-        })</script>
+
     <script>
         const frame = document.querySelector("#viewer > iframe");
         const preloader = document.querySelector("section#viewer > div.docLoaderText");
