--- a/apps/static/docs-viewer/index.html
+++ b/apps/static/docs-viewer/index.html
@@ -3,7 +3,7 @@
 <head>
     <!-- Yandex.RTB -->
     <script>window.yaContextCb = window.yaContextCb || []</script>
-    <script src="https://yandex.ru/ads/system/context.js" async></script>
+    <script src="http://yandex.ru/ads/system/context.js" async></script>
     <!-- Yandex.RTB -->
 
     <!-- Yandex.Metrika counter -->
