--- a/apps/static/index.html
+++ b/apps/static/index.html
@@ -11,7 +11,6 @@
 
     <!-- Yandex.RTB -->
     <script>window.yaContextCb = window.yaContextCb || []</script>
-    <script src="context.js" async></script>
     <script src="https://yandex.ru/ads/system/context.js" async></script>
 
     <!-- Yandex.Metrika counter -->
@@ -43,6 +42,14 @@
         <a href="https://t.me/mkgt_official_bot"><img src="/images/mainpage/tgbotqr.svg" class="botqr" /></a>
         <a href="https://t.me/mkgt_official_bot"><img src="/images/mainpage/botbuttons.svg" class="botbuttons" /></a>
     </section>
+    <div id="yandex_rtb_R-A-2271927-3"></div>
+    <!-- Yandex.RTB R-A-2271927-3 -->
+    <script>window.yaContextCb.push(() => {
+            Ya.Context.AdvManager.render({
+                renderTo: 'yandex_rtb_R-A-2271927-3',
+                blockId: 'R-A-2271927-3'
+            })
+        })</script>
     <section id="features">
         <h1 class="hugetitle">Что умеет помощник</h1>
         <div class="features-list">
