--- a/apps/static/docs-viewer/index.html
+++ b/apps/static/docs-viewer/index.html
@@ -1,10 +1,10 @@
 <Html> <!-- This tag is compulsory for any HTML document. -->
 
 <head>
-
     <meta charset="utf-8">
 
-
+    <link rel="stylesheet" href="/normalize.css" />
+    <link rel="stylesheet" href="index.css" />
 
     <!-- Yandex.RTB -->
     <script>window.yaContextCb = window.yaContextCb || []</script>
@@ -32,14 +32,11 @@
         <div><img src="https://mc.yandex.ru/watch/92937071" style="position:absolute; left:-9999px;" alt="" /></div>
     </noscript>
     <!-- /Yandex.Metrika counter -->
-
-    <link rel="stylesheet" href="/normalize.css" />
-    <link rel="stylesheet" href="index.css" />
 </head>
 
 <Body>
     <section id="viewer">
-        <div class="docLoaderText"></div>
+        <div class="docLoaderText">Загрузка... Ещё 30</div>
         <iframe class="notLoaded">
             Loading ...
         </iframe>
