--- a/apps/static/docs-viewer/index.html
+++ b/apps/static/docs-viewer/index.html
@@ -53,6 +53,28 @@
             })</script>
     </section>
 
+    <section class="advert">
+        <div id="yandex_rtb_R-A-2271927-3"></div>
+        <!-- Yandex.RTB R-A-2271927-3 -->
+        <script>window.yaContextCb.push(() => {
+                Ya.Context.AdvManager.render({
+                    renderTo: 'yandex_rtb_R-A-2271927-3',
+                    blockId: 'R-A-2271927-3'
+                })
+            })</script>
+    </section>
+
+    <section class="advert">
+        <div id="yandex_rtb_R-A-2271927-3"></div>
+        <!-- Yandex.RTB R-A-2271927-3 -->
+        <script>window.yaContextCb.push(() => {
+                Ya.Context.AdvManager.render({
+                    renderTo: 'yandex_rtb_R-A-2271927-3',
+                    blockId: 'R-A-2271927-3'
+                })
+            })</script>
+    </section>
+
     <script>
         const frame = document.querySelector("#viewer > iframe");
         const preloader = document.querySelector("section#viewer > div.docLoaderText");
@@ -89,7 +111,7 @@
                     frame.setAttribute("class", "");
                 }
             }, 1000)
-        },700)
+        }, 700)
     </script>
 </Body>
 
