--- a/apps/static/docs-viewer/index.html
+++ b/apps/static/docs-viewer/index.html
@@ -43,34 +43,20 @@
     </section>
 
     <section class="advert">
+        <!--
         <div id="yandex_rtb_R-A-2271927-3"></div>
-        <!-- Yandex.RTB R-A-2271927-3 -->
         <script>window.yaContextCb.push(() => {
                 Ya.Context.AdvManager.render({
                     renderTo: 'yandex_rtb_R-A-2271927-3',
                     blockId: 'R-A-2271927-3'
                 })
             })</script>
-    </section>
-
-    <section class="advert">
-        <div id="yandex_rtb_R-A-2271927-3"></div>
-        <!-- Yandex.RTB R-A-2271927-3 -->
+            -->
+        <!-- Yandex.RTB R-A-2271927-4 -->
         <script>window.yaContextCb.push(() => {
                 Ya.Context.AdvManager.render({
-                    renderTo: 'yandex_rtb_R-A-2271927-3',
-                    blockId: 'R-A-2271927-3'
-                })
-            })</script>
-    </section>
-
-    <section class="advert">
-        <div id="yandex_rtb_R-A-2271927-3"></div>
-        <!-- Yandex.RTB R-A-2271927-3 -->
-        <script>window.yaContextCb.push(() => {
-                Ya.Context.AdvManager.render({
-                    renderTo: 'yandex_rtb_R-A-2271927-3',
-                    blockId: 'R-A-2271927-3'
+                    type: 'floorAd',
+                    blockId: 'R-A-2271927-4'
                 })
             })</script>
     </section>
