--- a/apps/static/docs-viewer/index.html
+++ b/apps/static/docs-viewer/index.html
@@ -43,7 +43,7 @@
     </section>
 
     <section class="advert">
-        <!--
+        <!-- Yandex.RTB R-A-2271927-3 -->
         <div id="yandex_rtb_R-A-2271927-3"></div>
         <script>window.yaContextCb.push(() => {
                 Ya.Context.AdvManager.render({
@@ -51,7 +51,7 @@
                     blockId: 'R-A-2271927-3'
                 })
             })</script>
-            -->
+
         <!-- Yandex.RTB R-A-2271927-4 -->
         <script>window.yaContextCb.push(() => {
                 Ya.Context.AdvManager.render({
