--- a/apps/static/docs-viewer/index.html
+++ b/apps/static/docs-viewer/index.html
@@ -8,7 +8,7 @@
 
     <!-- Yandex.RTB -->
     <script>window.yaContextCb = window.yaContextCb || []</script>
-    <script src="http://yandex.ru/ads/system/context.js" async></script>
+    <script src="http://yandex.ru/ads/system/context.js"></script>
     <!-- Yandex.RTB -->
 
     <!-- Yandex.Metrika counter -->
