--- a/apps/static/docs-viewer/index.html
+++ b/apps/static/docs-viewer/index.html
@@ -41,7 +41,14 @@
             Loading ...
         </iframe>
     </section>
-
+    <!-- Yandex Native Ads C-A-2271927-5 -->
+    <div id="yandex_rtb_C-A-2271927-5"></div>
+    <script>window.yaContextCb.push(() => {
+            Ya.Context.AdvManager.renderWidget({
+                renderTo: 'yandex_rtb_C-A-2271927-5',
+                blockId: 'C-A-2271927-5'
+            })
+        })</script>
     <section class="advert">
         <!-- Yandex.RTB R-A-2271927-3 -->
         <div id="yandex_rtb_R-A-2271927-3"></div>
