--- a/apps/static/docs-viewer/index.html
+++ b/apps/static/docs-viewer/index.html
@@ -50,20 +50,21 @@
             })
         })</script>
     <section class="advert">
+        <!-- Yandex.RTB R-A-2271927-4 -->
+        <script>window.yaContextCb.push(() => {
+                Ya.Context.AdvManager.render({
+                    type: 'floorAd',
+                    blockId: 'R-A-2271927-4'
+                })
+            })</script>
+    </section>
+    <section>
         <!-- Yandex.RTB R-A-2271927-3 -->
         <div id="yandex_rtb_R-A-2271927-3"></div>
         <script>window.yaContextCb.push(() => {
                 Ya.Context.AdvManager.render({
                     renderTo: 'yandex_rtb_R-A-2271927-3',
                     blockId: 'R-A-2271927-3'
-                })
-            })</script>
-
-        <!-- Yandex.RTB R-A-2271927-4 -->
-        <script>window.yaContextCb.push(() => {
-                Ya.Context.AdvManager.render({
-                    type: 'floorAd',
-                    blockId: 'R-A-2271927-4'
                 })
             })</script>
     </section>
