--- a/apps/static/docs-viewer/index.html
+++ b/apps/static/docs-viewer/index.html
@@ -58,7 +58,7 @@
                 })
             })</script>
     </section>
-    <section>
+    <section class="advert-recomends">
         <!-- Yandex.RTB R-A-2271927-3 -->
         <div id="yandex_rtb_R-A-2271927-3"></div>
         <script>window.yaContextCb.push(() => {
