--- a/apps/static/docs-viewer/index.html
+++ b/apps/static/docs-viewer/index.html
@@ -51,6 +51,36 @@
                 })
             })</script>
     </section>
+    <section class="advert">
+        <!-- Yandex.RTB R-A-2271927-7 -->
+        <div id="yandex_rtb_R-A-2271927-7"></div>
+        <script>window.yaContextCb.push(() => {
+                Ya.Context.AdvManager.render({
+                    renderTo: 'yandex_rtb_R-A-2271927-7',
+                    blockId: 'R-A-2271927-7'
+                })
+            })</script>
+    </section>
+    <section class="advert">
+        <!-- Yandex.RTB R-A-2271927-8 -->
+        <div id="yandex_rtb_R-A-2271927-8"></div>
+        <script>window.yaContextCb.push(() => {
+                Ya.Context.AdvManager.render({
+                    renderTo: 'yandex_rtb_R-A-2271927-8',
+                    blockId: 'R-A-2271927-8'
+                })
+            })</script>
+    </section>
+    <section class="advert">
+        <!-- Yandex.RTB R-A-2271927-9 -->
+        <div id="yandex_rtb_R-A-2271927-9"></div>
+        <script>window.yaContextCb.push(() => {
+                Ya.Context.AdvManager.render({
+                    renderTo: 'yandex_rtb_R-A-2271927-9',
+                    blockId: 'R-A-2271927-9'
+                })
+            })</script>
+    </section>
 
     <script>
         const frame = document.querySelector("#viewer > iframe");
