--- a/apps/static/docs-viewer/index.html
+++ b/apps/static/docs-viewer/index.html
@@ -92,6 +92,16 @@
                 })
             })</script>
     </section>
+    <section class="advert">
+        <!-- Yandex.RTB R-A-2271927-10 -->
+        <div id="yandex_rtb_R-A-2271927-10"></div>
+        <script>window.yaContextCb.push(() => {
+                Ya.Context.AdvManager.render({
+                    renderTo: 'yandex_rtb_R-A-2271927-10',
+                    blockId: 'R-A-2271927-10'
+                })
+            })</script>
+    </section>
 
     <script>
         const frame = document.querySelector("#viewer > iframe");
