--- a/apps/static/docs-viewer/index.html
+++ b/apps/static/docs-viewer/index.html
@@ -52,56 +52,58 @@
             Loading ...
         </iframe>
     </section>
-    <section class="advert">
-        <!-- Yandex.RTB R-A-2271927-3 -->
-        <div id="yandex_rtb_R-A-2271927-3"></div>
-        <script>window.yaContextCb.push(() => {
-                Ya.Context.AdvManager.render({
-                    renderTo: 'yandex_rtb_R-A-2271927-3',
-                    blockId: 'R-A-2271927-3'
-                })
-            })</script>
-    </section>
-    <section class="advert">
-        <!-- Yandex.RTB R-A-2271927-7 -->
-        <div id="yandex_rtb_R-A-2271927-7"></div>
-        <script>window.yaContextCb.push(() => {
-                Ya.Context.AdvManager.render({
-                    renderTo: 'yandex_rtb_R-A-2271927-7',
-                    blockId: 'R-A-2271927-7'
-                })
-            })</script>
-    </section>
-    <section class="advert">
-        <!-- Yandex.RTB R-A-2271927-8 -->
-        <div id="yandex_rtb_R-A-2271927-8"></div>
-        <script>window.yaContextCb.push(() => {
-                Ya.Context.AdvManager.render({
-                    renderTo: 'yandex_rtb_R-A-2271927-8',
-                    blockId: 'R-A-2271927-8'
-                })
-            })</script>
-    </section>
-    <section class="advert">
-        <!-- Yandex.RTB R-A-2271927-9 -->
-        <div id="yandex_rtb_R-A-2271927-9"></div>
-        <script>window.yaContextCb.push(() => {
-                Ya.Context.AdvManager.render({
-                    renderTo: 'yandex_rtb_R-A-2271927-9',
-                    blockId: 'R-A-2271927-9'
-                })
-            })</script>
-    </section>
-    <section class="advert">
-        <!-- Yandex.RTB R-A-2271927-10 -->
-        <div id="yandex_rtb_R-A-2271927-10"></div>
-        <script>window.yaContextCb.push(() => {
-                Ya.Context.AdvManager.render({
-                    renderTo: 'yandex_rtb_R-A-2271927-10',
-                    blockId: 'R-A-2271927-10'
-                })
-            })</script>
-    </section>
+    <div class="advertcontainer">
+        <section class="advert">
+            <!-- Yandex.RTB R-A-2271927-3 -->
+            <div id="yandex_rtb_R-A-2271927-3"></div>
+            <script>window.yaContextCb.push(() => {
+                    Ya.Context.AdvManager.render({
+                        renderTo: 'yandex_rtb_R-A-2271927-3',
+                        blockId: 'R-A-2271927-3'
+                    })
+                })</script>
+        </section>
+        <section class="advert">
+            <!-- Yandex.RTB R-A-2271927-7 -->
+            <div id="yandex_rtb_R-A-2271927-7"></div>
+            <script>window.yaContextCb.push(() => {
+                    Ya.Context.AdvManager.render({
+                        renderTo: 'yandex_rtb_R-A-2271927-7',
+                        blockId: 'R-A-2271927-7'
+                    })
+                })</script>
+        </section>
+        <section class="advert">
+            <!-- Yandex.RTB R-A-2271927-8 -->
+            <div id="yandex_rtb_R-A-2271927-8"></div>
+            <script>window.yaContextCb.push(() => {
+                    Ya.Context.AdvManager.render({
+                        renderTo: 'yandex_rtb_R-A-2271927-8',
+                        blockId: 'R-A-2271927-8'
+                    })
+                })</script>
+        </section>
+        <section class="advert">
+            <!-- Yandex.RTB R-A-2271927-9 -->
+            <div id="yandex_rtb_R-A-2271927-9"></div>
+            <script>window.yaContextCb.push(() => {
+                    Ya.Context.AdvManager.render({
+                        renderTo: 'yandex_rtb_R-A-2271927-9',
+                        blockId: 'R-A-2271927-9'
+                    })
+                })</script>
+        </section>
+        <section class="advert">
+            <!-- Yandex.RTB R-A-2271927-10 -->
+            <div id="yandex_rtb_R-A-2271927-10"></div>
+            <script>window.yaContextCb.push(() => {
+                    Ya.Context.AdvManager.render({
+                        renderTo: 'yandex_rtb_R-A-2271927-10',
+                        blockId: 'R-A-2271927-10'
+                    })
+                })</script>
+        </section>
+    </div>
 
     <script>
         const frame = document.querySelector("#viewer > iframe");
