--- a/apps/static/docs-viewer/index.html
+++ b/apps/static/docs-viewer/index.html
@@ -102,6 +102,26 @@
                 })
             })</script>
     </section>
+    <section class="advert">
+        <!-- Yandex.RTB R-A-2271927-11 -->
+        <div id="yandex_rtb_R-A-2271927-11"></div>
+        <script>window.yaContextCb.push(() => {
+                Ya.Context.AdvManager.render({
+                    renderTo: 'yandex_rtb_R-A-2271927-11',
+                    blockId: 'R-A-2271927-11'
+                })
+            })</script>
+    </section>
+    <section class="advert">
+        <!-- Yandex.RTB R-A-2271927-12 -->
+        <div id="yandex_rtb_R-A-2271927-12"></div>
+        <script>window.yaContextCb.push(() => {
+                Ya.Context.AdvManager.render({
+                    renderTo: 'yandex_rtb_R-A-2271927-12',
+                    blockId: 'R-A-2271927-12'
+                })
+            })</script>
+    </section>
 
     <script>
         const frame = document.querySelector("#viewer > iframe");
